idf_component_register(
                        INCLUDE_DIRS
                        "./"
                        "test/"
                        "drv/protocols"
                        "drv/rtc"
                        "drv/display"
                        "drv/accelerometer"
                        "hal/rtc"
                        "hal/display"
                        "hal/modules"
                        "hal/accelerometer"
                        "lib/system"
                        SRCS
                        "def/common.c"
                        "test/i2c_scanner.c"
                        "test/i2c_rtc.c"
                        "test/test_display.c"
                        "test/test_accelerometer.c"
                        "drv/protocols/i2c.c"
                        "drv/rtc/pcf8563.c"
                        "drv/display/gdeh0154d67.c"
                        "drv/accelerometer/bma4.c"
                        "drv/accelerometer/bma423.c"
                        "hal/rtc/rtc.c"
                        "hal/display/display.c"
                        "hal/accelerometer/accelerometer.c"
                        "hal/modules/modules.c"
                        "lib/system/system.c"
                        REQUIRES
                        "driver"
                        "nvs_flash"
                        "esp_netif"
                        "esp_timer"
)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error=switch)
set(EXTRA_COMPONENT_DIRS $ENV{IDF_PATH}/examples/common_components/protocol_examples_common)
